--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ plugins:
 
 author:
   name   : "Beto Macedo"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/NoCafe.jpeg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
