--- a/_config.yml
+++ b/_config.yml
@@ -57,20 +57,14 @@ plugins:
 author:
   name   : "Beto Macedo"
   avatar : "/assets/images/NoCafe.jpeg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "De Recife/Pernambuco"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
 
 footer:
   links:
