alterar site.locale para locale

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,6 @@ twitter_username: beneditomacedo
 github_username: beneditomacedo
 minimal_mistakes_skin: default
 search: true
-site.locale: pt-BR
 
 # Build settings
 markdown: kramdown
@@ -30,6 +29,7 @@ permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+locale: pt-BR
 
 include:
   - _pages
